feat: corrige estrutura e acessibilidade do formulario

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <section>
             <h2>Adicionar tarefa</h2>
             <form action="" id="task-form">
-                <label for="task-input"></label>
-                <input type="submit" value="" id="task-input">Adicionar</input>
+                <label for="task-input">Nome tarefa:</label>
+                <input type="text" id="task-input" placeholder="Digite sua tarefa" required>
+                <button type="submit">Adicionar</button>
             </form>
         </section>
 
@@ -24,7 +25,7 @@
             <ul id="task-list"></ul>
         </section>
     </main>
-    
+
     <footer>
         <p>Kelvin Costa - 2025</p>
     </footer>   
