--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
     <footer>
         <p>Kelvin Costa - 2025</p>
-    </footer>   
+    </footer>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
